# autoshield

./: .env.example  .gitignore  README.md  attacks.py  config.py  costs.py  gauntlet.py  judge.py  main.py  models.py  prd.md  program.md  pyproject.toml  researcher.py  storage.py  system_prompt.txt
docs/superpowers/plans/: 2026-04-30-step1-skeleton.md  2026-05-28-step2-attack-catalog.md  2026-05-28-step3-gauntlet.md  2026-05-28-step4-researcher.md  2026-05-28-step5-storage.md  2026-05-28-step6-costs.md  2026-05-29-attack-redesign.md  2026-05-29-attack-v2.md  2026-05-29-step7-main-loop.md
docs/superpowers/specs/: 2026-04-30-step1-skeleton-design.md  2026-05-28-step2-attack-catalog-design.md  2026-05-28-step3-gauntlet-design.md  2026-05-28-step4-researcher-design.md  2026-05-28-step5-storage-design.md  2026-05-28-step6-costs-design.md  2026-05-28-step7-main-loop-design.md  2026-05-29-attack-redesign-design.md  2026-05-29-attack-v2-design.md
tests/: test_attacks.py  test_costs.py  test_gauntlet.py  test_judge.py  test_main.py  test_models.py  test_researcher.py  test_storage.py
