[project]
name = "autoshield"
version = "0.1.0"
description = "Autonomous security hardening of mini models via research loop"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "python-dotenv>=1.0",
    "tiktoken>=0.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]
